@@ -2766,8 +2766,16 @@ void GetWindowSizeHints(FvwmWindow *tmp)
 			}
 			tmp->hints.flags &= ~PAspect;
 			fvwm_msg(
-				WARN, "GetWindowSizeHints", "%s window %#lx"
-				" has broken aspect ratio: %d/%d - %d/%d\n",
+				WARN, "GetWindowSizeHints",
+				"The applicaton window \"%s\"\n"
+				"(window id %#lx)"
+				" has broken aspect ratio: %d/%d - %d/%d\n"
+				"Fvwm is ignoring the aspect ratio.  "
+				"If you are having a problem\n"
+				"with the application, send this message to"
+				" the application owner.\n"
+				"There is no need to notify "
+				"fvwm-workers@fvwm.org.\n",
 				tmp->name.name, FW_W(tmp), minAspectX,
 				minAspectY, maxAspectX, maxAspectY);
 		}
@@ -2812,10 +2820,14 @@ void GetWindowSizeHints(FvwmWindow *tmp)
 	if (*broken_cause != 0)
 	{
 		fvwm_msg(WARN, "GetWindowSizeHints",
-			 "%s window %#lx has broken (%s) size hints\n"
-			 "Please send a bug report to the application owner,\n"
-			 "\tyou may use fvwm-workers@fvwm.org as a reference.\n"
-			 "hint override = %d\n"
+			 "The application window \"%s\"\n(window id %#lx) "
+			 "has broken size hints (%s).\n"
+			 "Fvwm is ignoring those hints.  "
+			 "If you are having a problem\n"
+			 "with the application, send this message to"
+			 " the application owner.\n"
+			 "There is no need to notify fvwm-workers@fvwm.org.\n"
+			 "hint override = %d "
 			 "flags = %lx\n"
 			 "min_width = %d, min_height = %d, "
 			 "max_width = %d, max_height = %d\n"
